[gd_scene load_steps=43 format=3 uid="uid://bcg16p31b62fa"]

[ext_resource type="PackedScene" uid="uid://crnxsy0cpcpxx" path="res://Scenes/world_map.tscn" id="1_a54fm"]
[ext_resource type="PackedScene" uid="uid://dbr8ppr7fbm0l" path="res://Scenes/rain.tscn" id="1_e2d7k"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_oumf7"]
[ext_resource type="Texture2D" uid="uid://c8fiox05owxi5" path="res://Assets/Map/trees.png" id="2_feo03"]
[ext_resource type="Texture2D" uid="uid://b7it5xp5vdeaa" path="res://Assets/Characters/main/flight.png" id="2_u2v4n"]
[ext_resource type="Texture2D" uid="uid://jtiohelidj7p" path="res://Assets/Characters/main/sign1.png" id="4_5rjqf"]
[ext_resource type="Texture2D" uid="uid://csmjwnfme4iei" path="res://Assets/Texttures/64x64 textures (46).png" id="4_tcylb"]
[ext_resource type="FontFile" uid="uid://csi8hv8ntqjw2" path="res://Assets/UI/Fonts/BKShatteredScore.ttf" id="5_d5eis"]
[ext_resource type="Texture2D" uid="uid://mmcxrcxihyv6" path="res://Assets/Characters/main/duck3.png" id="7_13b0f"]
[ext_resource type="Script" path="res://Scripts/menuCam.gd" id="8_y1frt"]
[ext_resource type="Texture2D" uid="uid://cmk2gjcn50273" path="res://Assets/Texttures/particleTexture.png" id="10_j0ye1"]
[ext_resource type="PackedScene" uid="uid://cbkfqdpwi1mny" path="res://Scenes/lights.tscn" id="11_fglfb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tkxvb"]
atlas = ExtResource("2_u2v4n")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_riqkw"]
atlas = ExtResource("2_u2v4n")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkdjt"]
atlas = ExtResource("2_u2v4n")
region = Rect2(200, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_ekh47"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkxvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riqkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkdjt")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c57nx"]
atlas = ExtResource("2_feo03")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu8kh"]
atlas = ExtResource("2_feo03")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcu7v"]
atlas = ExtResource("2_feo03")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx6tp"]
atlas = ExtResource("2_feo03")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfawk"]
atlas = ExtResource("2_feo03")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvhbu"]
atlas = ExtResource("2_feo03")
region = Rect2(600, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_3esb1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c57nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu8kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcu7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx6tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfawk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvhbu")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_awt0b"]
font = ExtResource("5_d5eis")
font_size = 100

[sub_resource type="AtlasTexture" id="AtlasTexture_4vhy7"]
atlas = ExtResource("4_5rjqf")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha3in"]
atlas = ExtResource("4_5rjqf")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_55s2a"]
atlas = ExtResource("4_5rjqf")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xacnx"]
atlas = ExtResource("4_5rjqf")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bucx"]
atlas = ExtResource("4_5rjqf")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aafhb"]
atlas = ExtResource("4_5rjqf")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_xu7il"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vhy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha3in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55s2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xacnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bucx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aafhb")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h1yqq"]
atlas = ExtResource("7_13b0f")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbk31"]
atlas = ExtResource("7_13b0f")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lytle"]
atlas = ExtResource("7_13b0f")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p064o"]
atlas = ExtResource("7_13b0f")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_igqg8"]
atlas = ExtResource("7_13b0f")
region = Rect2(400, 200, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_rw3dj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1yqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbk31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lytle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p064o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igqg8")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_pt35o"]
resource_name = "Menufade"
length = 0.5

[sub_resource type="Animation" id="Animation_ucea5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuELements:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuELements/tree:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5.76, 5.56)]
}

[sub_resource type="Animation" id="Animation_y3ylr"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuELements:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f5bwj"]
resource_name = "treeMotion"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuELements/tree:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(5.76, 5.56), Vector2(5.8, 5.8), Vector2(6, 6.1), Vector2(6.1, 6), Vector2(6, 5.8), Vector2(5.8, 5.8), Vector2(5.76, 5.56)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7nj2r"]
_data = {
"Menufade": SubResource("Animation_pt35o"),
"RESET": SubResource("Animation_ucea5"),
"fade": SubResource("Animation_y3ylr"),
"treeMotion": SubResource("Animation_f5bwj")
}

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("1_oumf7")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100000, 1e+06)
layout_mode = 0
offset_left = -2183.0
offset_top = -1736.0
offset_right = 97817.0
offset_bottom = 998264.0
color = Color(0, 0, 0, 1)

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(993.3, 72.36)
scale = Vector2(2.61563, 1.9175)
texture = ExtResource("4_tcylb")

[node name="MenuELements" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 20

[node name="fly" type="AnimatedSprite2D" parent="MenuELements"]
z_index = 50
position = Vector2(691, 92)
scale = Vector2(1.95, 1.96)
sprite_frames = SubResource("SpriteFrames_ekh47")
autoplay = "default"
frame_progress = 0.34521

[node name="tree" type="AnimatedSprite2D" parent="MenuELements"]
position = Vector2(226, 330)
scale = Vector2(5.76, 5.56)
sprite_frames = SubResource("SpriteFrames_3esb1")
frame_progress = 0.0784148

[node name="tree2" type="AnimatedSprite2D" parent="MenuELements"]
position = Vector2(973, 332)
scale = Vector2(5.76, 5.56)
sprite_frames = SubResource("SpriteFrames_3esb1")
frame_progress = 0.0784148

[node name="rain" parent="MenuELements" instance=ExtResource("1_e2d7k")]
position = Vector2(534, 40)

[node name="WorldMap" parent="MenuELements" instance=ExtResource("1_a54fm")]
layer_0/tile_data = PackedInt32Array(2424836, 65537, 0, 2424837, 65537, 0, 2424838, 65537, 0, 2424839, 65537, 0, 2424840, 65537, 0, 2424841, 65537, 0, 2424842, 65537, 0, 2424843, 65537, 0, 2424844, 65537, 0, 2424845, 65537, 0, 2424846, 65537, 0, 2424847, 65537, 0, 2424848, 65537, 0, 2424849, 65537, 0, 2424850, 65537, 0, 2424851, 65537, 0, 2424852, 65537, 0, 2424853, 65537, 0, 2424854, 65537, 0, 2424855, 65537, 0, 2424856, 65537, 0, 2424857, 65537, 0, 2424858, 65537, 0, 2424859, 65537, 0, 2424860, 65537, 0, 2424861, 65537, 0, 2424862, 65537, 0, 2424863, 65537, 0, 2424864, 65537, 0, 2424865, 65537, 0, 2424866, 65537, 0, 2424867, 65537, 0, 2424868, 65537, 0, 2424869, 65537, 0, 2424870, 65537, 0, 2424871, 65537, 0, 2424872, 65537, 0, 2424873, 65537, 0, 2424874, 65537, 0, 2424875, 65537, 0, 2424876, 65537, 0, 2424877, 65537, 0, 2424878, 65537, 0, 2424879, 65537, 0, 2424880, 65537, 0, 2424881, 65537, 0, 2424882, 65537, 0, 2424883, 65537, 0, 2424884, 65537, 0, 2424885, 65537, 0, 2424886, 65537, 0, 2424887, 65537, 0, 2424888, 65537, 0, 2424889, 65537, 0, 2424890, 65537, 0, 2424891, 65537, 0, 2424892, 65537, 0, 2424893, 65537, 0, 2424894, 65537, 0, 2424895, 65537, 0, 2424896, 65537, 0, 2424897, 65537, 0, 2424898, 65537, 0, 2424835, 65537, 0, 2424899, 65537, 0, 2490371, 65537, 4, 2490372, 65537, 4, 2490373, 65537, 4, 2490374, 65537, 4, 2490375, 65537, 4, 2490376, 65537, 4, 2490377, 65537, 4, 2490378, 65537, 4, 2490379, 65537, 4, 2490380, 65537, 4, 2490381, 65537, 4, 2490382, 65537, 4, 2490383, 65537, 4, 2490384, 65537, 4, 2490385, 65537, 4, 2490386, 65537, 4, 2490423, 65537, 4, 2490424, 65537, 4, 2490425, 65537, 4, 2490426, 65537, 4, 2490427, 65537, 4, 2490428, 65537, 4, 2490429, 65537, 4, 2490430, 65537, 4, 2490431, 65537, 4, 2490432, 65537, 4, 2490433, 65537, 4, 2490434, 65537, 4, 2490435, 65537, 4, 2424834, 1, 0, 2490370, 1, 4, 2424900, 655361, 0, 2490436, 655361, 4)

[node name="menuCam" type="Camera2D" parent="MenuELements"]
position = Vector2(568, 349)
script = ExtResource("8_y1frt")

[node name="MarginContainer" type="MarginContainer" parent="MenuELements"]
offset_left = 496.0
offset_top = 293.0
offset_right = 696.0
offset_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MenuELements/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MenuELements/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MenuELements/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d5eis")
theme_override_font_sizes/font_size = 40
toggle_mode = true
text = "Tutorial
"

[node name="Levels" type="Button" parent="MenuELements/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_d5eis")
theme_override_font_sizes/font_size = 40
text = "Levels"

[node name="Settings" type="Button" parent="MenuELements/MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d5eis")
theme_override_font_sizes/font_size = 40
toggle_mode = true
text = "settings"

[node name="quit" type="Button" parent="MenuELements/MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d5eis")
theme_override_font_sizes/font_size = 40
toggle_mode = true
text = "quit"

[node name="Label" type="Label" parent="MenuELements"]
offset_left = 242.0
offset_top = 109.0
offset_right = 963.0
offset_bottom = 230.0
text = "Tumble Roll"
label_settings = SubResource("LabelSettings_awt0b")

[node name="sign" type="AnimatedSprite2D" parent="MenuELements"]
position = Vector2(398, 517)
scale = Vector2(1.25, 1.38)
sprite_frames = SubResource("SpriteFrames_xu7il")
autoplay = "default"
frame_progress = 0.235426

[node name="lights" parent="MenuELements" instance=ExtResource("11_fglfb")]
position = Vector2(799, 511)

[node name="tucker" type="AnimatedSprite2D" parent="MenuELements"]
z_index = 20
position = Vector2(407, 310)
scale = Vector2(1.97, 1.745)
sprite_frames = SubResource("SpriteFrames_rw3dj")
autoplay = "default"
frame_progress = 0.583243

[node name="PointLight2D" type="PointLight2D" parent="MenuELements/tucker"]
texture = ExtResource("4_tcylb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7nj2r")
}
autoplay = "treeMotion"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(435, 289)
scale = Vector2(1.05496, 0.644282)
blend_mode = 2
texture = ExtResource("10_j0ye1")
texture_scale = 18.74

[connection signal="pressed" from="MenuELements/MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MenuELements/MarginContainer/HBoxContainer/VBoxContainer/Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="MenuELements/MarginContainer/HBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
